adminer-deployment-serwis-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      aplikacja: panel-adminera
  template:
    metadata:
      labels:
        aplikacja: panel-adminera
    spec:
      containers:
      - name: adminer-kontener
        image: adminer:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  type: LoadBalancer # Poprawiono z NodePort na LoadBalancer dla MetalLB
  selector:
    aplikacja: panel-adminera
  ports:
  - port: 80         # Port zewnętrzny dla MetalLB (.220)
    targetPort: 8080 # Port wewnątrz kontenera Adminera
