nextcloud-deployment-i-serwis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
spec:
  replicas: 1            # Zmniejszamy do 1 na czas pierwszej instalacji, potem podbijesz do 2
  selector:
    matchLabels:
      aplikacja: chmura-nextcloud
  template:
    metadata:
      labels:
        aplikacja: chmura-nextcloud
    spec:
      containers:
      - name: nextcloud-kontener
        image: nextcloud:28
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-dane
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-dane
        persistentVolumeClaim:
          claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  type: LoadBalancer
  selector:
    aplikacja: chmura-nextcloud
  ports:
  - port: 80
    targetPort: 80
