adminer-firewall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adminer-firewall
  namespace: default
spec:
  podSelector:
    matchLabels:
      aplikacja: panel-adminera
  policyTypes:
  - Ingress
  ingress:
  # Reguła 1: Twój domowy laptop / sieć lokalna Centrali
  - from:
    - ipBlock:
        cidr: 192.168.55.0/24
    ports:
    - protocol: TCP
      port: 80
  # Reguła 2: SYSTEMOWA - Pozwól ruchowi z innych przestrzeni nazw (np. MetalLB) przechodzić do klastra
  #- from:
  #  - namespaceSelector: {}
